# cmeel-lapack

./: .cirrus.yml  cmeel.patch  pyproject.toml
.github/workflows/: release.yml
