[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"

[project]
name = "cmeel-lapack"
version = "3.11.0"
description = "cmeel distribution for LAPACK"
requires-python = ">= 3.7"
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-lapack"
repository = "https://github.com/cmake-wheel/cmeel-lapack.git"

[tool.cmeel]
build-number = 4
configure-args = ["-DBUILD_SHARED_LIBS=ON", "-DCBLAS=ON", "-DLAPACKE=ON", "-DBLAS++=ON", "-DLAPACK++=ON"]
py3-none = true
run-tests = false
source = "lapack"
