[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for LAPACK"
license = "BSD-3-Clause"
name = "cmeel-lapack"
requires-python = ">= 3.7"
version = "3.11.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-lapack"
repository = "https://github.com/cmake-wheel/cmeel-lapack.git"

[tool.cmeel]
build-number = 9
configure-args = ["-DBLAS++=ON", "-DBUILD_SHARED_LIBS=ON", "-DCBLAS=ON", "-DLAPACK++=ON", "-DLAPACKE=ON"]
py3-none = true
run-tests = false
source = "lapack"

[tool.tomlsort]
all = true
